[project]
name = "integration-tests"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest",
    "pyarrow==18.0.0", # this may need a fix in awkward-array for newer versions
    # the next at their current HEAD
    "awkward[test] @ git+https://github.com/scikit-hep/awkward.git",
    "uproot[test,dev] @ git+https://github.com/scikit-hep/uproot5.git",
    "vector[dev] @ git+https://github.com/scikit-hep/vector.git",
    "coffea[dev,dask] @ git+https://github.com/scikit-hep/coffea.git",
    "dask-awkward[complete,test] @ git+https://github.com/dask-contrib/dask-awkward.git",
]
